kubernetes_deployment/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name:  alaya-namespace
  labels:
    env: dev
    owner: ArtemBorodenko
