kubernetes_deployment/autoscaling.yaml
apiVersion : apps/v1
kind: Deployment
metadata:
  name: alaya-autoscaling
  labels:
    app  : alaya
    env  : prod
    owner: ArtemBorodenko
spec:
  selector:
    matchLabels:
      project: alaya
  template:
    metadata:
      labels:
        project: alaya
    spec:
      containers:
        - name : alaya-web
          image: artemborodenko/alaya:latest
          ports:
            - containerPort: 80
