kubernetes_deployment/deployment.yaml
apiVersion : apps/v1
kind: Deployment
metadata:
  name: alya-deployment
  namespace: alaya-namespace
  labels:
    app : my-k8s-application
    env : prod
    owner: ArtemBorodenko
spec:
  replicas: 2
  selector:
    matchLabels:
      project: ala
  template:
    metadata:
      labels:
        project: ala
    spec:
      containers:
        - name : ala-web
          image: artemborodenko/alaya:latest
          ports:
            - containerPort: 8000
