kubernetes_deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-pod-service
  namespace: alaya-namespace
  labels:
    env: prod
    owner: ArtemBorodenko


spec:
  selector:
    project: ala
  ports:
    - name: k8s-app-listener
      protocol: TCP
      port: 8000
      targetPort: 8000
  type: ClusterIP
