kubernetes_deployment/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: alaya-ingress
  namespace: alaya-namespace
  annotations:
      kubernetes.io/ingress.class: nginx
  labels:
    env: dev
    owner: ArtemBorodenko

spec:
  defaultBackend:
    service:
      name: app-pod-service
      port:
        number: 8000
  rules:
  - host: alaya.com
    http:
      paths:
        - pathType: Prefix
          path: "/healtcheck"
          backend:
            service:
              name: app-pod-service
              port:
               number: 8000
